[project]
name = "gridworks-base"
version = "0.4.0"
description = "Gridworks Base"
readme = "README.md"
authors = [
    { name = "GridWorks", email = "gridworks@gridworks-consulting.com" },
]
license = "MIT"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pika>=1.3.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
]

[project.urls]
Homepage = "https://github.com/thegridelectric/gridworks-base"
Repository = "https://github.com/thegridelectric/gridworks-base"
Changelog = "https://github.com/thegridelectric/gridworks-base/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gwbase"]

[dependency-groups]
dev = [
    "Pygments>=2.10.0",
    "coverage[toml]>=6.2",
    "furo>=2021.11.12",
    "mypy>=0.930",
    "pep8-naming>=0.12.1",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pytest>=6.2.5",
    "pyupgrade>=2.29.1",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
    "ruff>=0.5.6",
    "pika-stubs>=0.1.3",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gwbase", "tests"]

[tool.coverage.report]
show_missing = false
fail_under = 70

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
exclude = [
    ".ci",
    ".github",
    "CodeGenerationTools",
    "for_docker",
    "rabbit",
    ".git",
    ".mypy_cache",
    ".nox",
    "htmlcov",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "pythonProject",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
]
target-version = "py312"
output-format = "concise"
fix = true
show-fixes = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
# default select used by  ruff: ["E4", "E7", "E9", "F"]
select = ["B","C90","E4", "E7", "E9","F","I","N","PL", "W",]
ignore = ["B027", "PLR0904", "PLW1514", "W191",]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",     # asserts allowed in tests
    "PLR6301",  # test methods needn't use self
    "PLR0913",  # fixtures/helpers may take many args
    "PLW0717",  # multi-statement try is fine in test setup
]
